adding more residual forms

--- a/notebooks/exploratory/4.2-twh-optimize-loss-fn-form.md
+++ b/notebooks/exploratory/4.2-twh-optimize-loss-fn-form.md
@@ -50,13 +50,67 @@ import warnings
 warnings.filterwarnings('ignore')
 ```
 
+# Get the data
+
+```{code-cell} ipython3
+datafile = "../../data/external/Al-1 _vwf.txt"
+# just copying from the data file
+# temperature
+teV = 1
+t = teV / AtomicUnits.energy
+
+# density
+d_ang = 0.18071 # 1/[angstroms]**3
+d = d_ang * AtomicUnits.length**3
+
+datadump = np.loadtxt(datafile, skiprows=9, usecols=[0, 5, 6, 9], unpack=True)
+orig_freq_data = datadump[0] # [eV]
+print(f"length of original data = {len(orig_freq_data)}")
+collrate_data = datadump[1] + 1j * datadump[2]
+dos_data = datadump[3]
+
+# function for true collision rate
+true_collrate_fn = lambda x : np.interp(x, orig_freq_data / AtomicUnits.energy, collrate_data)
+# function for DOS ratio
+dos_fn = lambda x : np.interp(x, orig_freq_data / AtomicUnits.energy, dos_data)
+
+# create a new, more regular frequency grid that what exists in the data file
+freq_data = np.geomspace(orig_freq_data[0], orig_freq_data[-1], 101) # [eV]
+# Wavenumber is independent of data -- can pick whatever we want to create our ELF data
+wavenum_val = 0.7 / AtomicUnits.length # 1/[angstrom]
+```
+
+### Create ELF data with collision rate data, and an noisy ELF data set
+
+We will also trim down the number of data points.
+
+```{code-cell} ipython3
+# true ELF data
+elf_data = elec_loss_fn(Mermin(ElectronGas(t, d, dos_fn)),
+                        wavenum_val * AtomicUnits.length,
+                        freq_data / AtomicUnits.energy,
+                        true_collrate_fn
+                       )
+print(f"shape of ELF data = {elf_data.shape}")
+
+# noisy ELF data: additive Gaussian noise with a standard deviation
+# set to 1% of the max value
+elf_data_noise = elf_data + 0.01 * np.max(elf_data) * rng.standard_normal(len(elf_data)) 
+```
+
+### plot the collision rate data
+
+```{code-cell} ipython3
+plt.semilogx(freq_data, true_collrate_fn(freq_data / AtomicUnits.energy).real, label="real")
+plt.plot(freq_data, true_collrate_fn(freq_data / AtomicUnits.energy).imag, label="imag.")
+plt.xlabel(r"$\omega$ [eV]")
+plt.ylabel("collision frequency [au]")
+plt.legend()
+```
+
 # Define collision rate model
 
 ```{code-cell} ipython3
----
-jupyter:
-  source_hidden: true
----
 # define our collision rate function
 def collisionrate(freq, params):
     # real part
@@ -92,10 +146,11 @@ def make_plots(
     """
     
     # plotting characterstics depend on if we plot the last subplot
-    numplots = 3 if np.all(elf_data > 0) else 2
-    figsize = (6, 10)
+    numplots = 3 if np.all(elfdata > 0) else 2
     if numplots == 3:
         figsize = (6, 15)
+    else:
+        figsize = (6, 10)
     fig, axs = plt.subplots(numplots, 1, figsize=figsize, sharex=True)
     
     # collision frequency
@@ -240,7 +295,11 @@ def analysis(
                     (ydata - model) / |ydata * model|**(1 / 2)
 
         The different types will tend to emphasize different features in the
-        data that the parameters of the model should be optimized to fit. 
+        data that the parameters of the model should be optimized to fit. For
+        "rel_mod" and "rel_geom", the residual is no longer of a form that
+        is ammenable to least squares-specifc solvers. These use BFGS to
+        minimize the cost function 1/2 * || r(x) ||^2_2, where r(x) is
+        the residual.
     """    
     # setup
     residual = partial(residual_fn,
@@ -253,7 +312,11 @@ def analysis(
                       )
     
     # optimization results
-    optresult = optimize.least_squares(residual, initparams, max_nfev=150)
+    if residualtype == "abs" or residualtype == "rel":
+        optresult = optimize.least_squares(residual, initparams, max_nfev=150)
+    else:
+        cost = lambda x : np.linalg.norm(residual(x))**2 / 2
+        optresult = optimize.minimize(cost, initparams, method="BFGS", options={"maxiter":150})
 
     # print difference between the model with optimized parameters
     # and the data
@@ -262,85 +325,13 @@ def analysis(
                             freq,
                             lambda x: collisionfn(x, optresult.x)
                            )
-    print(f"2-norm of residual: {np.linalg.norm(optresult.fun)}")
+    print(f"2-norm of residual: {np.linalg.norm(residual(optresult.x))}")
 
     # plot the results
     _ = make_plots(freq * AtomicUnits.energy, elf_calc, ydata, collisionfn(freq, optresult.x), collisiondata)
     
     return optresult
 ```
-
-# Get the data
-
-```{code-cell} ipython3
-datafile = "../../data/external/Al-1 _vwf.txt"
-# just copying from the data file
-# temperature
-teV = 1
-t = teV / AtomicUnits.energy
-
-# density
-d_ang = 0.18071 # 1/[angstroms]**3
-d = d_ang * AtomicUnits.length**3
-
-datadump = np.loadtxt(datafile, skiprows=9, usecols=[0, 5, 6, 9], unpack=True)
-orig_freq_data = datadump[0] # [eV]
-print(f"length of original data = {len(orig_freq_data)}")
-collrate_data = datadump[1] + 1j * datadump[2]
-dos_data = datadump[3]
-
-# function for true collision rate
-true_collrate_fn = lambda x : np.interp(x, orig_freq_data / AtomicUnits.energy, collrate_data)
-# function for DOS ratio
-dos_fn = lambda x : np.interp(x, orig_freq_data / AtomicUnits.energy, dos_data)
-
-# create a new, more regular frequency grid that what exists in the data file
-freq_data = np.geomspace(orig_freq_data[0], orig_freq_data[-1], 150) # [eV]
-# Wavenumber is independent of data -- can pick whatever we want to create our ELF data
-wavenum_val = 0.7 / AtomicUnits.length # 1/[angstrom]
-```
-
-### Create ELF data with collision rate data, and an noisy ELF data set
-
-We will also trim down the number of data points.
-
-```{code-cell} ipython3
-# true ELF data
-elf_data = elec_loss_fn(Mermin(ElectronGas(t, d, dos_fn)),
-                        wavenum_val * AtomicUnits.length,
-                        freq_data / AtomicUnits.energy,
-                        true_collrate_fn
-                       )
-print(f"shape of ELF data = {elf_data.shape}")
-
-# noisy ELF data: additive Gaussian noise with a standard deviation
-# set to 1% of the max value
-elf_data_noise = elf_data + 0.01 * np.max(elf_data) * rng.standard_normal(len(elf_data)) 
-```
-
-### plot the collision rate data
-
-```{code-cell} ipython3
-plt.semilogx(freq_data, true_collrate_fn(freq_data / AtomicUnits.energy).real, label="real")
-plt.plot(freq_data, true_collrate_fn(freq_data / AtomicUnits.energy).imag, label="imag.")
-plt.xlabel(r"$\omega$ [eV]")
-plt.ylabel("collision frequency [au]")
-plt.legend()
-```
-
-# Define a residual function for optimizing the parameters
-We are ultimately performing a nonlinear least squares optimization. The loss function in this case is
-$$ L(\theta) = \min_\theta \|r(\theta)\|_2^2,$$
-where the $i^\mathrm{th}$ component of the vector residual is $r_i(\theta) = y_i - f(x_i; \theta)$, and
-$y_i$ is the data and $f(x_i; \theta)$ is the model evaluated at the point $x_i$ with parameters $\theta$
-we want to optimize.
-
-We also want to consider a residual function that considers the _relative_ difference between the model and
-the data, $r'_i(\theta) = (y_i - f(x_i; \theta))/y_i$. This can be useful if the data spans different orders
-of magnitude and we want to treat each point equally (for example, when using the absolute residual, by default larger values have more importance
-simply because they are larger).
-
-+++
 
 # Optimize to get parameters
 
@@ -380,13 +371,14 @@ opt = analysis(freq_data / AtomicUnits.energy,
 ## 3. Absolute residual with noisy data
 
 ```{code-cell} ipython3
-opt = analysis(freq_data_trim / AtomicUnits.energy,
+opt = analysis(freq_data / AtomicUnits.energy,
                elf_data_noise,
                Mermin(ElectronGas(t, d, dos_fn)),
                wavenum_val * AtomicUnits.length,
                collisionrate,
                initparams,
-               residualtype="abs"
+               true_collrate_fn(freq_data / AtomicUnits.energy),
+               "abs"
               )
 ```
 
@@ -396,16 +388,41 @@ opt = analysis(freq_data_trim / AtomicUnits.energy,
 tails which have a lower signal to noise ratio)
 
 ```{code-cell} ipython3
-opt = analysis(freq_data_trim / AtomicUnits.energy,
+opt = analysis(freq_data / AtomicUnits.energy,
                elf_data_noise,
                Mermin(ElectronGas(t, d, dos_fn)),
                wavenum_val * AtomicUnits.length,
                collisionrate,
                initparams,
+               true_collrate_fn(freq_data / AtomicUnits.energy),
                residualtype="rel"
               )
 ```
 
-```{code-cell} ipython3
+## 5. Relative residual w.r.t the model, with noisy data
 
+```{code-cell} ipython3
+opt = analysis(freq_data / AtomicUnits.energy,
+               elf_data_noise,
+               Mermin(ElectronGas(t, d, dos_fn)),
+               wavenum_val * AtomicUnits.length,
+               collisionrate,
+               initparams,
+               true_collrate_fn(freq_data / AtomicUnits.energy),
+               residualtype="rel_mod"
+              )
+```
+
+## 6. Relative residual w.r.t the geometric mean of the data and the model, with noisy data
+
+```{code-cell} ipython3
+opt = analysis(freq_data / AtomicUnits.energy,
+               elf_data_noise,
+               Mermin(ElectronGas(t, d, dos_fn)),
+               wavenum_val * AtomicUnits.length,
+               collisionrate,
+               initparams,
+               true_collrate_fn(freq_data / AtomicUnits.energy),
+               residualtype="rel_geom"
+              )
 ```
