Minor changes to notebook 4.1
Includes switch to equally spaced log grid

--- a/notebooks/exploratory/4.1-twh-optimize-known-AA_collisions.md
+++ b/notebooks/exploratory/4.1-twh-optimize-known-AA_collisions.md
@@ -51,7 +51,7 @@ import warnings
 warnings.filterwarnings('ignore')
 ```
 
-# Define collision rate # Define collision rate model# Define collision rate model# Define collision rate modelmodel
+# Define collision rate model
 
 ```{code-cell} ipython3
 # define our collision rate function
@@ -78,31 +78,28 @@ d_ang = 0.18071 # 1/[angstroms]**3
 d = d_ang * AtomicUnits.length**3
 
 datadump = np.loadtxt(datafile, skiprows=9, usecols=[0, 5, 6, 9], unpack=True)
-freq_data = datadump[0] # [eV]
-print(f"length of data = {len(freq_data)}")
+orig_freq_data = datadump[0] # [eV]
+print(f"length of original data = {len(orig_freq_data)}")
 collrate_data = datadump[1] + 1j * datadump[2]
 dos_data = datadump[3]
 
 # function for true collision rate
-true_collrate_fn = lambda x : np.interp(x, freq_data / AtomicUnits.energy, collrate_data)
+true_collrate_fn = lambda x : np.interp(x, orig_freq_data / AtomicUnits.energy, collrate_data)
 # function for DOS ratio
-dos_fn = lambda x : np.interp(x, freq_data / AtomicUnits.energy, dos_data)
+dos_fn = lambda x : np.interp(x, orig_freq_data / AtomicUnits.energy, dos_data)
 
+# create a new, more regular frequency grid that what exists in the data file
+freq_data = np.geomspace(orig_freq_data[0], orig_freq_data[-1], 200) # [eV]
 # Wavenumber is independent of data -- can pick whatever we want to create our ELF data
 wavenum_val = 0.7 / AtomicUnits.length # 1/[angstrom]
 ```
 
 ### Create ELF data with collision rate data
 
-We will also trim down the number of data points.
-
 ```{code-cell} ipython3
-# Reduce the amount of data we are considering
-freq_data_trim = freq_data[::8]
-
 elf_data = elec_loss_fn(Mermin(ElectronGas(t, d, dos_fn)),
                         wavenum_val * AtomicUnits.length,
-                        freq_data_trim / AtomicUnits.energy,
+                        freq_data / AtomicUnits.energy,
                         true_collrate_fn
                        )
 print(elf_data.shape)
@@ -111,10 +108,10 @@ print(elf_data.shape)
 ### plot the collision rate data
 
 ```{code-cell} ipython3
-plt.semilogx(freq_data_trim, true_collrate_fn(freq_data_trim / AtomicUnits.energy).real, label="real")
-plt.plot(freq_data_trim, true_collrate_fn(freq_data_trim / AtomicUnits.energy).imag, label="imag.")
-plt.xlabel(r"$\omega$ [eV]")
-plt.ylabel("collision frequency [au]")
+plt.semilogx(freq_data, true_collrate_fn(freq_data / AtomicUnits.energy).real, label="real")
+plt.plot(freq_data, true_collrate_fn(freq_data / AtomicUnits.energy).imag, c="C0", ls='--', label="imag.")
+plt.xlabel(r"$\hbar\omega$ [eV]")
+plt.ylabel("collision rate [au]")
 plt.legend()
 ```
 
@@ -148,7 +145,7 @@ def residual_fn(x, y, dielectricfn, wavenum, collisionfn, params):
 ```{code-cell} ipython3
 # setup
 residual = partial(residual_fn,
-                   freq_data_trim / AtomicUnits.energy,
+                   freq_data / AtomicUnits.energy,
                    elf_data,
                    Mermin(ElectronGas(t, d, dos_fn)),
                    wavenum_val * AtomicUnits.length,
@@ -169,38 +166,38 @@ Plot true collision frequencies and the optimized versions
 
 ```{code-cell} ipython3
 # original
-plt.semilogx(freq_data_trim, true_collrate_fn(freq_data_trim / AtomicUnits.energy).real, c="C3", label="Avg. Atom")
-plt.plot(freq_data_trim, true_collrate_fn(freq_data_trim / AtomicUnits.energy).imag, c="C3", ls="--")
+plt.semilogx(freq_data, true_collrate_fn(freq_data / AtomicUnits.energy).real, c="C3", label="Avg. Atom")
+plt.plot(freq_data, true_collrate_fn(freq_data / AtomicUnits.energy).imag, c="C3", ls="--")
 # optimized
-plt.plot(freq_data_trim, collisionrate(freq_data_trim / AtomicUnits.energy, optresult.x).real, c="C0", label="opt.")
-plt.plot(freq_data_trim, collisionrate(freq_data_trim / AtomicUnits.energy, optresult.x).imag, c="C0", ls="--")
-plt.xlabel(r"$\omega$ [eV]")
-plt.ylabel("collision frequency [au]")
+plt.plot(freq_data, collisionrate(freq_data / AtomicUnits.energy, optresult.x).real, c="C0", label="opt.")
+plt.plot(freq_data, collisionrate(freq_data / AtomicUnits.energy, optresult.x).imag, c="C0", ls="--")
+plt.xlabel(r"$\hbar\omega$ [eV]")
+plt.ylabel("collision rate [au]")
 plt.legend()
 ```
 
 ```{code-cell} ipython3
-plt.semilogx(freq_data_trim, elf_data, c="C3", label="Avg. Atom")
+plt.semilogx(freq_data, elf_data, c="C3", label="Avg. Atom")
 opt_elf = elec_loss_fn(Mermin(ElectronGas(t, d, dos_fn)),
                        wavenum_val * AtomicUnits.length,
-                       freq_data_trim / AtomicUnits.energy,
+                       freq_data / AtomicUnits.energy,
                        lambda x: collisionrate(x, optresult.x)
                       )
-plt.plot(freq_data_trim, opt_elf, c="C0", ls='-.', label="opt.")
+plt.plot(freq_data, opt_elf, c="C0", ls='-.', label="opt.")
 plt.ylabel("ELF [au]")
-plt.xlabel(r"$\omega$ [eV]")
+plt.xlabel(r"$\hbar \omega$ [eV]")
 plt.ylim(1e-6) # resolution of data
 plt.legend()
 ```
 
 ```{code-cell} ipython3
-plt.loglog(freq_data_trim, elf_data, c="C3", label="Avg. Atom")
+plt.loglog(freq_data, elf_data, c="C3", label="Avg. Atom")
 opt_elf = elec_loss_fn(Mermin(ElectronGas(t, d, dos_fn)),
                        wavenum_val * AtomicUnits.length,
-                       freq_data_trim / AtomicUnits.energy,
+                       freq_data / AtomicUnits.energy,
                        lambda x: collisionrate(x, optresult.x)
                       )
-plt.plot(freq_data_trim, opt_elf, c="C0", ls='-.', label="opt.")
+plt.plot(freq_data, opt_elf, c="C0", ls='-.', label="opt.")
 plt.ylabel("ELF [au]")
 plt.xlabel(r"$\omega$ [eV]")
 plt.ylim(1e-6) # resolution of data
