--- a/notebooks/exploratory/1.0-twh-dsf-sensitivity.md
+++ b/notebooks/exploratory/1.0-twh-dsf-sensitivity.md
@@ -5,20 +5,20 @@ jupytext:
     extension: .md
     format_name: myst
     format_version: 0.13
-    jupytext_version: 1.15.2
+    jupytext_version: 1.16.0
 kernelspec:
   display_name: Python 3 (ipykernel)
   language: python
   name: python3
 ---
 
-# DSF sensitivty to the collision frequency
+# DSF sensitivty to the collision rate
 
-We examine how sensitive the dyanmic structure factor (DSF) is to the choice of collision frequency, $\nu(\omega)$, where $\omega$ is the energy (frequency) transferred during the scattering experiment. We are specifically interested in the high-frequency (that is, high-$\omega$) limit. We use the Mermin dielectric function, $\epsilon(q, \omega; \nu[\omega])$, to compute the DSF $S(q, \omega)$ via the formula
+We examine how sensitive the dyanmic structure factor (DSF) is to the choice of collision rate, $\nu(\omega)$, where $\omega$ is the energy (frequency) transferred during the scattering experiment. We are specifically interested in the high-frequency (that is, high-$\omega$) limit. We use the Mermin dielectric function, $\epsilon(q, \omega; \nu[\omega])$, to compute the DSF $S(q, \omega)$ via the formula
 
 $$ S(q, \omega) = \frac{1}{1 - \exp(-\omega / k_B T)}\frac{q^2}{4 \pi n_e} \mathrm{Im}\bigg\{\frac{-1}{\epsilon(q, \omega)}\bigg\},$$
 
-where $q$ is the momentum (wavenumber) transferred during the scattering experiment, $T$ is the (electron) temperature, and $n_e$ is the electron density. Because the only part of the DSF that depends on the collision frequency is the term $\mathrm{Im}\{-1/\epsilon(q, \omega)\}$ (called the __electron loss function [ELF]__), we focus on the sensitivity of that. We can also write the ELF as
+where $q$ is the momentum (wavenumber) transferred during the scattering experiment, $T$ is the (electron) temperature, and $n_e$ is the electron density. Because the only part of the DSF that depends on the collision rate is the term $\mathrm{Im}\{-1/\epsilon(q, \omega)\}$ (called the __electron loss function [ELF]__), we focus on the sensitivity of that. We can also write the ELF as
 
 $$ \mathrm{Im}\bigg(\frac{-1}{\epsilon}\bigg ) =   \frac{\mathrm{Im}(\epsilon)}{\mathrm{Re}(\epsilon)^2 + \mathrm{Im}(\epsilon)^2} . $$
 
@@ -28,7 +28,7 @@ Unless specified, everything will be written/computed in atomic units (see [this
 
 ## Motivation to explore the DSF sensitivity
 
-The collision frequency enters the Mermin dielectric function in a very specific way. Consider the Mermin dielectric function:
+The collision rate enters the Mermin dielectric function in a very specific way. Consider the Mermin dielectric function:
 $$ \epsilon(q, \omega; \nu[\omega]) = 1 + \frac{(\omega+i\nu)[\epsilon^0(q, \omega+i\nu) - 1]}{\omega + i\nu \frac{\epsilon^0(q, \omega+i\nu) - 1}{\epsilon^0(q,0)-1}},$$
 
 where $\epsilon^0$ is the random phase approximation (RPA) dielectric function. When $\omega >> \nu(\omega)$, we have (roughly) $\epsilon(q, \omega; \nu) \approx \epsilon^0(q, \omega+i\nu) \approx \epsilon^0(q, \omega)$. So the Mermin dielectric, and thus the ELF and the DSF, should be mostly indepedent of the details on $\nu$ for large $\omega$'s. (Note we are assuming that $\big | \frac{\epsilon^0(q, \omega+i\nu) - 1}{\epsilon^0(q,0)-1} \big | \leq 1$)
@@ -37,6 +37,8 @@ where $\epsilon^0$ is the random phase approximation (RPA) dielectric function. 
 import numpy as np
 import matplotlib.pyplot as plt
 from uegdielectric import ElectronGas, dielectric
+
+from src.utilities import elec_loss_fn
 ```
 
 ```{code-cell} ipython3
@@ -45,30 +47,6 @@ from uegdielectric import ElectronGas, dielectric
 
 # Always reload modules so that as you change code in src, it gets loaded
 %autoreload 2
-```
-
-## ELF
-
-```{code-cell} ipython3
-def elf(q, ω, ν, e):
-    """
-    Computes the ELF
-
-    q: array-like or float
-        wavenumber
-    ω: array-like or float
-        frequency
-    ν: function, float, or None
-        collision frequency
-    e: ElectronGas object
-        ElectronGas instance containing parameters of the material
-    """
-    # dielectric model
-    model = dielectric.Mermin(e, ν)
-    # evaluate dielectric at q and ω points
-    vals = model(q, ω)
-
-    return vals.imag / (vals.real**2 + vals.imag**2)
 ```
 
 ## Parameters
@@ -106,14 +84,14 @@ Wavenumbers
 q = [0.5, 1, 1.5]  # [au]
 ```
 
-## Collision frequency model
+## Collision rate model
 
 Here we start with a simple Lorentzian model centered at $\omega = 0$ for $\nu$. This choice is based on the form of the Drude conductivity __[confirm this]__
 
 ```{code-cell} ipython3
 def ν_lorentz(ω, width=1, height=1):
     """
-    Lorentzian model for the collision frequency
+    Lorentzian model for the collision rate
 
     ω: dependent variable
     width: width of lorentzian peak
@@ -126,7 +104,7 @@ def ν_lorentz(ω, width=1, height=1):
 xlog = np.geomspace(1e-1, 1e3, 100)
 plt.plot(xlog, ν_lorentz(xlog, width=10))
 plt.xscale("log")
-plt.ylabel("Lorentzian collision frequency")
+plt.ylabel("Lorentzian collision rate")
 plt.xlabel(r"$\omega$")
 ```
 
@@ -135,7 +113,7 @@ xlog = np.geomspace(1e-1, 1e3, 100)
 plt.plot(xlog, ν_lorentz(xlog, width=10))
 plt.xscale("log")
 plt.yscale("log")
-plt.ylabel("Lorentzian collision frequency")
+plt.ylabel("Lorentzian collision rate")
 plt.xlabel(r"$\omega$")
 ```
 
@@ -144,7 +122,7 @@ Now, we will modify the simple Lorentzian model so that we have more control ove
 ```{code-cell} ipython3
 def ν_model_1(ω, width=1, height=1, rise=0):
     """
-    Collision frequency model, as a modified version of the Lorentzian model.
+    Collision rate model, as a modified version of the Lorentzian model.
     `rise` roughly controls how fast the high frequency tails "rise", with 0
     coresponding to a normal Lorentzian function.
     """
@@ -163,7 +141,7 @@ for rise in risevals:
     )
 plt.xscale("log")
 plt.yscale("linear")
-plt.ylabel("Lorentzian collision frequency")
+plt.ylabel("Lorentzian collision rate")
 plt.xlabel(r"$\omega$")
 plt.legend()
 ```
@@ -180,29 +158,32 @@ for rise in risevals:
     )
 plt.xscale("log")
 plt.yscale("log")
-plt.ylabel("Lorentzian collision frequency")
+plt.ylabel("Lorentzian collision rate")
 plt.xlabel(r"$\omega$")
 plt.legend()
 ```
 
 ### Imaginary part
 
-The collision frequency has the special property that it obeys Kramers-Kronig relationship. This means that the real and imaginary parts of the collision frequency are connected through the Kramers-Kronig transform. This function is stored in `src/utilities`.
+The collision rate has the special property that it obeys Kramers-Kronig relationship. This means that the real and imaginary parts of the collision rate are connected through the Kramers-Kronig transform. This function is stored in `src/utilities`.
 
 ```{code-cell} ipython3
-from src.utilities import collfreqimag
+from src.utilities import collrateimag
 ```
 
 ```{code-cell} ipython3
-x = np.linspace(1e-1, 5e2, 2000)
-νr = ν_lorentz(x, width=10)
-νi = collfreqimag(νr)
+xlog = np.geomspace(1e-1, 1e3, 100)
+νr = ν_lorentz(xlog, width=10)
+νi = collrateimag(νr)
 ```
 
 ```{code-cell} ipython3
-plt.plot(x, νr)
-plt.plot(x, νi)
+plt.plot(xlog, νr)
+plt.plot(xlog, νi)
+
 plt.xscale("log")
+plt.ylabel("Lorentzian collision rate")
+plt.xlabel(r"$\omega$")
 ```
 
 ## Sensitivity analysis
@@ -211,7 +192,7 @@ We will calculate the ELF using collision frequencies with different high-$\omeg
 
 ```{code-cell} ipython3
 def plotsensitivity(
-    q, t, d, subregion, ν_model, kwarglist, kwlabel=None, resolution=200
+    q, t, d, ν_model, kwarglist, subregion=None, kwlabel=None, resolution=200
 ):
     """
     Plots for sensitivity analysis as a function of the wavenumber (q),
@@ -224,14 +205,14 @@ def plotsensitivity(
         Thermal energy of electrons [au]
     d: float
         Density of electrons [au]
-    subregion: tuple
-        A four-tuple (x1, x2, y1, y2) of a subregion of the
-        original plot
     ν_model: callable
-        the collision frequency function
+        the collision rate function
     kwarglist: list[dict's] list of dictionary objects
         A list of keyword argument dictionaries that go into `ν_model`.
         Use different kw args to see different behavior for the model.
+    subregion: tuple
+        A four-tuple (x1, x2, y1, y2) of a subregion of the
+        original plot
     kwlabel: string
         This function is primarily meant to be used while only varying
         one parameter of `ν_model`. Use this argument if you want to
@@ -242,12 +223,13 @@ def plotsensitivity(
         frequency).
     """
     fig, axs = plt.subplots(2, 1, figsize=(6, 6), sharex=True)
-    # inset axes focusing on ELF peak
-    x1, x2, y1, y2 = subregion  # subregion of the original plot
-    axins = axs[0].inset_axes(
-        [0.1, 0.05, 0.4, 0.7], xlim=(x1, x2), ylim=(y1, y2)
-    )
-
+    if subregion is not None:
+        # inset axes focusing on ELF peak
+        x1, x2, y1, y2 = subregion  # subregion of the original plot
+        axins = axs[0].inset_axes(
+            [0.1, 0.05, 0.4, 0.7], xlim=(x1, x2), ylim=(y1, y2)
+        )
+        
     # define the electron gas
     eg = ElectronGas(t, d)
 
@@ -260,28 +242,32 @@ def plotsensitivity(
     for kw in kwarglist:
 
         def ν(ω_):
-            return ν_model(ω_, **kw)
+            realcoll = ν_model(ω_, **kw)
+            imagcoll = collrateimag(realcoll)
+            return realcoll + 1j * imagcoll
 
-        elfcalc = elf(q, ω, ν, eg)
+        elfcalc = elec_loss_fn(dielectric.Mermin(eg), q, ω, ν)
 
         # ELF plot
         pl = axs[0].loglog(ω, elfcalc)
 
-        # ELF inset - semilogx focused on peak
-        axins.plot(ω, elfcalc)
-        axins.set_xticklabels([])
-        # axins.set_yticklabels([])
-        axs[0].indicate_inset_zoom(axins, edgecolor="grey")
+        if subregion is not None:
+            # ELF inset - semilogx focused on peak
+            axins.plot(ω, elfcalc)
+            axins.set_xticklabels([])
+            # axins.set_yticklabels([])
+            axs[0].indicate_inset_zoom(axins, edgecolor="grey")
 
-        # collision frequency plot
+        # collision rate plot
         label = None
         if kwlabel:
             label = f"{kwlabel} = {kw[kwlabel]:.2f}"
-        axs[1].loglog(ω, ν(ω), c=pl[-1].get_color(), label=label)
+        axs[1].semilogx(ω, (coll := ν(ω)).real, c=pl[-1].get_color(), label=label)
+        axs[1].plot(ω, coll.imag, c=pl[-1].get_color(), ls='--')
 
     axs[0].set_ylabel("ELF")
-    axs[1].set_ylabel("Collision Freq.")
-    axs[1].set_xlabel(r"$\omega$")
+    axs[1].set_ylabel("Collision Rate\n(real: solid; imag.: dashed)")
+    axs[1].set_xlabel(r"$\hbar\omega$")
 
     return axs
 ```
@@ -289,7 +275,7 @@ def plotsensitivity(
 ```{code-cell} ipython3
 modelparams = [{"width": 10, "rise": x} for x in [0, 0.5, 1, 1.5, 1.75, 2]]
 axs = plotsensitivity(
-    q[0], t[1], d[1], [0.1, 1, 0.2, 0.6], ν_model_1, modelparams, "rise"
+    q[0], t[1], d[1],  ν_model_1, modelparams, [0.1, 1, 0.2, 0.8], "rise"
 )
 axs[1].legend()
 ```
@@ -298,7 +284,7 @@ axs[1].legend()
 # lower temperature
 modelparams = [{"width": 10, "rise": x} for x in [0, 0.5, 1, 1.5, 1.75, 2]]
 axs = plotsensitivity(
-    q[0], t[0], d[1], [0.1, 1, 0.2, 0.6], ν_model_1, modelparams
+    q[0], t[0], d[1], ν_model_1, modelparams, [0.1, 1, 0.2, 0.8]
 )
 axs[0].set_title("Lower temperature")
 ```
@@ -307,7 +293,7 @@ axs[0].set_title("Lower temperature")
 # high density
 modelparams = [{"width": 10, "rise": x} for x in [0, 0.5, 1, 1.5, 1.75, 2]]
 axs = plotsensitivity(
-    q[0], t[1], d[2], [0.1, 3, 0.2, 2], ν_model_1, modelparams
+    q[0], t[1], d[2], ν_model_1, modelparams, [0.5, 4, 0.2, 1.5]
 )
 axs[0].set_title("higher density")
 ```
@@ -316,7 +302,7 @@ axs[0].set_title("higher density")
 # higher wavenumber
 modelparams = [{"width": 10, "rise": x} for x in [0, 0.5, 1, 1.5, 1.75, 2]]
 axs = plotsensitivity(
-    q[1], t[1], d[1], [0.1, 1.5, 0.1, 0.4], ν_model_1, modelparams
+    q[1], t[1], d[1], ν_model_1, modelparams, [0.1, 1.5, 0.1, 0.5]
 )
 axs[0].set_title("higher wavenumber")
 ```
@@ -387,8 +373,6 @@ plt.xlabel(r"$\omega$")
 plt.legend()
 ```
 
-Before looking at the sensitivities, I'm curious to see what the imaginary part of the collision frequencies look like.
-
 ```{code-cell} ipython3
 modelparams = [
     {"center": 1e-1, "height": 10, "power": x} for x in [-2, -1, 0, 1]
@@ -397,14 +381,16 @@ axs = plotsensitivity(
     q[0],
     t[1],
     d[1],
-    [1e-3, 3e-1, 1e-2, 0.5],
     ν_model_2,
     modelparams,
-    "power",
+    kwlabel="power",
     resolution=100,
 )
+axs[1].set_ylim(-20, 20)
 axs[1].legend()
 ```
+
+Note how the imaginary part of the red curve above (power = 1) gives a completely extreme results because the real part is actually increasing in magnitude as $\omega \rightarrow \infty$
 
 ```{code-cell} ipython3
 modelparams = [{"center": 1, "height": 10, "power": x} for x in [-2, -1, 0, 1]]
@@ -412,13 +398,13 @@ axs = plotsensitivity(
     q[0],
     t[1],
     d[1],
-    [1e-3, 3e-1, 1e-2, 0.5],
     ν_model_2,
     modelparams,
-    "power",
+    kwlabel="power",
     resolution=100,
 )
 axs[0].set_title(r"Increasing 'activation' point of $\nu$")
+axs[1].set_ylim(-20, 20)
 axs[1].legend()
 ```
 
@@ -428,13 +414,13 @@ axs = plotsensitivity(
     q[0],
     t[1],
     d[2],
-    [1e-3, 1, 1e-2, 0.5],
     ν_model_2,
     modelparams,
-    "power",
+    kwlabel="power",
     resolution=100,
 )
 axs[0].set_title("higher density")
+axs[1].set_ylim(-20, 20)
 axs[1].legend()
 ```
 
