--- a/notebooks/exploratory/4.0-twh-optimize-known-collisions.md
+++ b/notebooks/exploratory/4.0-twh-optimize-known-collisions.md
@@ -5,7 +5,7 @@ jupytext:
     extension: .md
     format_name: myst
     format_version: 0.13
-    jupytext_version: 1.15.2
+    jupytext_version: 1.16.0
 kernelspec:
   display_name: Python 3 (ipykernel)
   language: python
@@ -51,11 +51,9 @@ filename = "../../data/raw/mermin_ELF_test.txt"
 # just copying from the data file
 # parameters for collision model
 true_params = {
-    "drude_center": 0,
     "drude_height": 0.1,
-    "gendrude_center": 0,
     "gendrude_height": 1,
-    "gendrude_decay": 0.5,
+    "gendrude_power": 0.5,
     "logistic_activate": 0.1,
     "logistic_gradient": 100
 }
@@ -114,8 +112,9 @@ def residual_for_optimizer(x, y, dielectricfn, wavenum, collisionfn):
     return residual
 ```
 
+Test that residual is near zero for exact parameters (up to the resolution of the data)
+
 ```{code-cell} ipython3
-# test that residual is near zero for exact parameters
 resfn = residual_for_optimizer(freq_data / AtomicUnits.energy,
                                elf_data,
                                Mermin(ElectronGas(t, d)),
@@ -160,36 +159,36 @@ residual = residual_for_optimizer(freq_data / AtomicUnits.energy,
                                   collisionrate
                                  )
 # initial parameter guesses
-initparams = {"drude_center": 0, 
-               "drude_height": 1, 
-               "gendrude_center": 0, 
+initparams = { "drude_height": 1, 
                "gendrude_height": 1, 
-               "gendrude_decay": 1.5, 
-               "logistic_activate": 0, 
-               "logistic_gradient": 10
+               "gendrude_power": 1, 
+               "logistic_activate": 1, 
+               "logistic_gradient": 1
               }
 
 # optimization results
-optresult = dict_least_squares(residual, initparams, max_nfev=100)
+optresult = dict_least_squares(residual, initparams)
 ```
 
 ```{code-cell} ipython3
 optresult
 ```
 
-Plot true collision frequencies and the optimized versions
+Plot true collision rate and the optimized versions
 
 ```{code-cell} ipython3
 # original
-plt.loglog(freq_data, collrate_data.real, c="C3", label="true")
+plt.semilogx(freq_data, collrate_data.real, c="C3", label="true")
 plt.plot(freq_data, collrate_data.imag, c="C3", ls="--")
 # optimized
 plt.plot(freq_data, collisionrate(freq_data / AtomicUnits.energy, optresult.x).real, c="C0", label="opt.")
 plt.plot(freq_data, collisionrate(freq_data / AtomicUnits.energy, optresult.x).imag, c="C0", ls="--")
-plt.xlabel(r"$\omega$ [eV]")
+plt.xlabel(r"$\hbar\omega$ [eV]")
 plt.ylabel("collision frequency [au]")
 plt.legend()
 ```
+
+Plot the ELFs using the true and optimized collision rate parameters
 
 ```{code-cell} ipython3
 plt.loglog(freq_data, elf_data, c="C3", label="true")
@@ -200,13 +199,9 @@ opt_elf = elec_loss_fn(Mermin(ElectronGas(t, d)),
                       )
 plt.plot(freq_data, opt_elf, c="C0", ls='-.', label="opt.")
 plt.ylabel("ELF [au]")
-plt.xlabel(r"$\omega$ [eV]")
+plt.xlabel(r"$\hbar\omega$ [eV]")
 plt.ylim(1e-6) # resolution of data
 plt.legend()
-```
-
-```{code-cell} ipython3
-# perform MCMC
 ```
 
 ```{code-cell} ipython3
