--- a/notebooks/exploratory/4.1-twh-optimize-known-AA_collisions.md
+++ b/notebooks/exploratory/4.1-twh-optimize-known-AA_collisions.md
@@ -152,7 +152,7 @@ residual = partial(residual_fn,
                    collisionrate
                   )
 # initial parameter guesses
-initparams = (0, 1, 0, 1, 1.5, 0, 10)
+initparams = (1, 1, 1, 1, 1)
 
 # optimization results
 optresult = optimize.least_squares(residual, initparams, max_nfev=150)
