--- a/notebooks/exploratory/4.2-twh-optimize-loss-fn-form.md
+++ b/notebooks/exploratory/4.2-twh-optimize-loss-fn-form.md
@@ -102,9 +102,9 @@ elf_data_noise = elf_data + 0.01 * np.max(elf_data) * rng.standard_normal(len(el
 
 ```{code-cell} ipython3
 plt.semilogx(freq_data, true_collrate_fn(freq_data / AtomicUnits.energy).real, label="real")
-plt.plot(freq_data, true_collrate_fn(freq_data / AtomicUnits.energy).imag, label="imag.")
-plt.xlabel(r"$\omega$ [eV]")
-plt.ylabel("collision frequency [au]")
+plt.plot(freq_data, true_collrate_fn(freq_data / AtomicUnits.energy).imag, c="C0", ls='--', label="imag.")
+plt.xlabel(r"$\hbar\omega$ [eV]")
+plt.ylabel("collision rate [au]")
 plt.legend()
 ```
 
@@ -337,7 +337,7 @@ def analysis(
 
 ```{code-cell} ipython3
 # initial parameter guesses
-initparams = (0, 1, 0, 1, 1.5, 0, 10)
+initparams = (1, 1, 1, 1, 1)
 ```
 
 ## 1. absolute residual
