--- a/notebooks/exploratory/2.0-twh-collision-models.md
+++ b/notebooks/exploratory/2.0-twh-collision-models.md
@@ -5,7 +5,7 @@ jupytext:
     extension: .md
     format_name: myst
     format_version: 0.13
-    jupytext_version: 1.15.2
+    jupytext_version: 1.16.0
 kernelspec:
   display_name: Python 3 (ipykernel)
   language: python
@@ -143,7 +143,7 @@ def plotmodel_src(params):
     ax.loglog(ω, mods.collision_activate_decay(ω, **params), label="sum")
     drudebasic = mods.drude(ω, height=params["drude_height"])
     ax.plot(ω, drudebasic, ls='--', c='k', label="Drude")
-    gendrude = mods.gendrude(ω, height=params["gendrude_height"], decay=params["gendrude_decay"])
+    gendrude = mods.gendrude(ω, height=params["gendrude_height"], power=params["gendrude_power"])
     ax.plot(ω, gendrude, ls='-.', c='tan', label="genDrude")
     logistic = mods.logistic(ω, activate=params["logistic_activate"], gradient=params["logistic_gradient"]) + 1e-3
     ax.plot(ω, params["gendrude_height"] * logistic, ls='--', c='gray', label="logisitc + 1e-3")
@@ -154,11 +154,9 @@ def plotmodel_src(params):
 ```
 
 ```{code-cell} ipython3
-params = { "drude_center": 0, 
-           "drude_height": .1, 
-           "gendrude_center": 0, 
+params = { "drude_height": .1, 
            "gendrude_height": 1, 
-           "gendrude_decay": 1/5, 
+           "gendrude_power": 1/5, 
            "logistic_activate": 0.1, 
            "logistic_gradient": 20
           }
